# ansible-ui

./: .env  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml  start_server.py
config/: ansible.cfg
frontend/: .env.development  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/Auth/: LoginForm.tsx  ProtectedRoute.tsx
frontend/src/components/Debug/: AuthDebug.tsx
frontend/src/components/Layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/Project/: FileTreeView.tsx  MultiTabEditor.tsx  ProjectExplorer.tsx  ProjectSwitcher.tsx  ProjectWizard.tsx
frontend/src/components/Settings/: AnsibleConfigPanel.tsx  ConfigBackupPanel.tsx  SystemConfigPanel.tsx  UserManagementPanel.tsx
frontend/src/components/UI/: ChineseDatePicker.tsx  ChineseInput.tsx  ConfirmDialog.tsx  GlassButton.stories.tsx  GlassButton.tsx  GlassCard.stories.tsx  GlassCard.tsx  GlassChart.tsx  GlassConfirmDialog.tsx  GlassInput.tsx  GlassModal.tsx  GlassSelect.tsx  GlassTable.tsx  GlassTooltip.tsx  LanguageSwitcher.tsx  OSIcon.tsx  index.ts
frontend/src/constants/: chinese-constants.ts
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend/src/hooks/: useChineseFormat.ts  useTokenRefresh.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/pages/: AnimationTest.tsx  ComponentShowcase.tsx  Dashboard.tsx  Execution.tsx  History.tsx  Inventory.tsx  Login.tsx  Monitoring.tsx  NotFound.tsx  Playbooks.tsx  Projects.tsx  Settings.tsx
frontend/src/pages/settings/: AnsibleConfig.tsx  SystemConfig.tsx  UserManagement.tsx
frontend/src/services/: apiClient.ts  dashboardService.ts  executionService.ts  inventoryService.ts  monitoringService.ts  playbookService.ts  projectService.ts  settingsService.ts
frontend/src/styles/: App.css  glass-theme.ts  index.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts  project.ts
frontend/src/utils/: ansibleCompletionProvider.ts  chinese-formatters.ts  chinese-validators.ts  errorHandler.ts  formatters.ts  index.ts  requestOptimizer.ts
scripts/: db_manager.py  init_db.py
src/ansible_web_ui/: __init__.py  main.py
src/ansible_web_ui/api/: __init__.py
src/ansible_web_ui/api/v1/: __init__.py  auth.py  config.py  execution.py  history.py  inventory.py  logging.py  monitoring.py  playbooks.py  projects.py  roles.py  router.py  users.py
src/ansible_web_ui/auth/: __init__.py  decorators.py  dependencies.py  middleware.py  password_utils.py  permissions.py  security.py
src/ansible_web_ui/core/: __init__.py  cache.py  config.py  database.py  db_init.py  error_handlers.py  logging.py  middleware.py
src/ansible_web_ui/models/: __init__.py  base.py  host.py  host_group.py  playbook.py  project.py  project_file.py  role.py  system_config.py  task_execution.py  user.py
src/ansible_web_ui/schemas/: __init__.py  config_schemas.py  execution_schemas.py  history_schemas.py  host_group_schemas.py  host_schemas.py  logging_schemas.py  monitoring_schemas.py  playbook_schemas.py  project_file_schemas.py  project_schemas.py  role_schemas.py
src/ansible_web_ui/services/: __init__.py  ansible_execution_service.py  base.py  config_management_service.py  execution_history_service.py  file_cache_service.py  file_service.py  host_group_service.py  host_service.py  inventory_service.py  logging_service.py  playbook_service.py  playbook_validation_service.py  project_file_service.py  project_service.py  role_service.py  storage_service.py  storage_service_db.py  system_config_service.py  system_monitoring_service.py  task_execution_service.py  user_service.py
src/ansible_web_ui/tasks/: __init__.py  ansible_tasks.py  celery_app.py  error_handler.py  task_tracker.py  worker.py
src/ansible_web_ui/utils/: __init__.py  serialization.py  timezone.py  timezone_simple.py  validation.py
src/ansible_web_ui/websocket/: __init__.py  listener.py  manager.py
static/: .gitkeep
