[project]
name = "ansible-web-ui"
version = "0.1.0"
description = "现代化的Ansible Web用户界面，提供玻璃态设计风格的自动化管理平台"
authors = [
    {name = "Ansible Web UI Team", email = "team@ansible-web-ui.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["ansible", "web-ui", "automation", "devops", "glassmorphism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0", # PostgreSQL异步驱动
    "aiosqlite>=0.19.0", # SQLite异步驱动
    # 任务队列
    "celery>=5.3.0",
    "redis>=5.0.0",
    # 认证和安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Ansible集成
    "ansible>=8.0.0",
    "ansible-runner>=2.3.0",
    # SSH连接
    "paramiko>=3.4.0",
    # 工具库
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    # HTTP客户端
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    # 日志和监控
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.3.0",
    "psutil>=7.1.0",
    "requests>=2.32.5",
    "pytz>=2025.2",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # 用于API测试
    
    # 代码质量
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    
    # 开发工具
    "pre-commit>=3.6.0",
    "watchfiles>=0.21.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/ansible-web-ui/ansible-web-ui"
Documentation = "https://ansible-web-ui.readthedocs.io/"
Repository = "https://github.com/ansible-web-ui/ansible-web-ui.git"
Issues = "https://github.com/ansible-web-ui/ansible-web-ui/issues"

[project.scripts]
ansible-web-ui = "ansible_web_ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_web_ui"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目录
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ansible_web_ui"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ansible.*",
    "ansible_runner.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: 标记运行缓慢的测试",
    "integration: 标记集成测试",
    "unit: 标记单元测试",
    "api: 标记API测试",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
